fixed modal buttons spacing

--- a/src/shell/components/favicon/favicon.less
+++ b/src/shell/components/favicon/favicon.less
@@ -8,6 +8,9 @@
   height: 100%;
 
   .display {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     svg {
       cursor: pointer;
       width: 20px;
@@ -28,5 +31,8 @@
         height: 60px;
       }
     }
+  }
+  .Button {
+    margin-right: 8px;
   }
 }
